# proyecto_final_Angel_Miranda

./: LICENSE  README.md  pyproject.toml
app/: app.py
data/: README.md
data/processed/: StudentPerformanceFactors_clean.csv  model.pkl
notebooks/: EDA.ipynb  notebook.ipynb
src/api/: main.py  modelo.py  preparar_datos.py
tests/: test_api_contract.py
