[project]
name = "proyecto-final-jsap"
version = "0.1.0"
description = "Proyecto final de Seminario de Programacion"
authors = [
    {name = "Sebasan1709",email = "sbstnangel@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.13.1,<0.14.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]
